--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
     <div class="Ads__header">
         <div class="Header__title">Объявления</div>
         <div class="Header__button">Добавить</div>
