--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="body">
     <div class="Ads__header">
         <div class="Header__title">Объявления</div>
-        <div class="Header__button">Добавить</div>
+        <div id='add' class="Header__button">Добавить</div>
     </div>
     <div class="Ads__content">
         <div class="Content__box">
@@ -24,5 +24,32 @@
             <div class="Box__phone">+7 (999) 123-45-67</div>
         </div>
     </div>
+    <div id='modal' class='Modal__window' style='display:none'>
+        <div id='close' class='Modal__mask'></div>
+        <i></i>
+        <div class='Modal__form'>
+            <div class='Form__title'>Новое объявление</div>
+            <div class='Form__content'>
+                <div class='Content__field'>
+                    <label>Текст объявления</label>
+                    <textarea cols='30' rows='10'></textarea>
+                </div>
+                <div class='Content__field'>
+                    <label>Имя</label>
+                    <input type='text'>
+                </div>
+                <div class='Content__field'>
+                    <label>Телефон</label>
+                    <input type='text'>
+                </div>
+                <div class='Content__field'>
+                    <button>Добавить</button>
+                </div>
+            </div>
+        </div>
+        <i></i>
+    </div>
+    <script src='jquery-3.5.1.min.js'></script>
+    <script src='script.js'></script>
 </body>
 </html>
