--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
         <div class="Header__title">Объявления</div>
         <div id='add' class="Header__button">Добавить</div>
     </div>
-    <div class="Ads__content">
-        <div class="Content__box">
+    <div id="content" class="Ads__content">
+        <!-- <div class="Content__box">
             <div class="Box__info">Текст объявления</div>
             <div class="Box__name">Имя</div>
             <div class="Box__phone">+7 (999) 123-45-67</div>
-        </div>
-
-        <div class="Content__box">
-            <div class="Box__info">Текст объявления</div>
-            <div class="Box__name">Имя</div>
-            <div class="Box__phone">+7 (999) 123-45-67</div>
-        </div>
+        </div> -->
     </div>
+   
+   
     <div id='modal' class='Modal__window' style='display:none'>
         <div id='close' class='Modal__mask'></div>
         <i></i>
@@ -32,18 +28,18 @@
             <div class='Form__content'>
                 <div class='Content__field'>
                     <label>Текст объявления</label>
-                    <textarea cols='30' rows='10'></textarea>
+                    <textarea name="text" cols='30' rows='10'></textarea>
                 </div>
                 <div class='Content__field'>
                     <label>Имя</label>
-                    <input type='text'>
+                    <input name="name" type='text'>
                 </div>
                 <div class='Content__field'>
                     <label>Телефон</label>
-                    <input type='text'>
+                    <input name="phone" type='text'>
                 </div>
                 <div class='Content__field'>
-                    <button>Добавить</button>
+                    <button id="new">Добавить</button>
                 </div>
             </div>
         </div>
